--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -288,6 +288,10 @@ header.custome-header.tranparent.activeheader .toogleicon i {
     gap: 20px;
 }
 
+.margin-top.home{
+    display: none;
+}
+
 
 
 
