--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -182,6 +182,50 @@
         max-width: 31%;
     }
 
+    section.faqabout-sec {
+        padding: 60px 0px;
+    }
+
+
+    .faqhold {
+        padding-top: 30px;
+    }
+
+    .faqhold .row {
+        gap: 20px;
+    }
+
+    .btm-data-crowd-slider {
+        max-width: 385px;
+    }
+
+    .grid-projects {
+        gap: 30px;
+    }
+
+    .slider-main-images {
+        height: 245px;
+    }
+    .two-five {
+        font-size: 22px;
+    }
+    .btm-data-crowd-slider p {
+        font-size: 16px;
+    }
+    .btm-data-crowd-slider .data-acuired p {
+        font-size: 14px;
+    }
+    .datemain {
+        font-size: 16px;
+    }
+
+    section.allprojects-sec{
+        padding: 80px 0px;
+    }
+    section.allprojects-sec{
+        padding: 60px 0px;
+    }
+
 
 }
 
@@ -486,6 +530,29 @@
         padding-top: 30px;
     }
 
+    section.faqabout-sec .acrdean-data {
+        padding-top: 10px;
+    }
+
+    section.faqabout-sec {
+        padding: 50px 0px;
+    }
+
+    .btm-data-crowd-slider {
+        max-width: 340px;
+    }
+    .slider-main-images {
+        height: 210px;
+    }
+    .two-five {
+        font-size: 20px;
+        padding-bottom: 5px;
+    }
+
+    section.allprojects-sec{
+        padding: 50px 0px;
+    }
+
 
 
 
@@ -652,6 +719,7 @@
     .projects-holder {
         max-width: 45%;
     }
+
     header.custome-header.tranparent {
         background: #fff;
     }
@@ -660,20 +728,33 @@
         background: var(--color-white);
         box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
     }
-    
+
     header.custome-header.tranparent .main-navlink ul.navlist li a,
     .conactlink a {
         color: var(--color-black);
     }
-    
+
     header.custome-header.tranparent .main-navlink ul.navlist li a:hover {
         color: var(--color-blue);
     }
-    header.custome-header.tranparent .toogleicon i{
+
+    header.custome-header.tranparent .toogleicon i {
         color: #003087;
     }
-    .margin-top.home{
+
+    .margin-top.home {
         display: block;
+    }
+
+    header.custome-header.tranparent.activeheader .logo {
+        scale: 1;
+    }
+
+    section.faqabout-sec {
+        padding: 40px 0px;
+    }
+    .grid-projects{
+        padding-top: 30px;
     }
 
 
@@ -810,8 +891,13 @@
     .projects-holder {
         max-width: 48%;
     }
+
     .margin-top {
         margin-top: 64px;
+    }
+
+    section.aboutchoose-sec.faqmain .grid-cutter-images {
+        flex-direction: column;
     }
 
 
@@ -870,6 +956,14 @@
     .projects-holder {
         max-width: 350px;
     }
+
+    .swiper-slide.swiper-slide-active .insidedatahere {
+        bottom: 0;
+    }
+
+    .swiper-slide.swiper-slide-active .slidercase::after {
+        opacity: 0.5;
+    }
 }
 
 @media(max-width:575px) {
@@ -919,6 +1013,7 @@
         max-width: 360px;
         margin: 0 auto;
     }
+
     .margin-top {
         margin-top: 58px;
     }
