--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -288,7 +288,7 @@ header.custome-header.tranparent.activeheader .toogleicon i {
     gap: 20px;
 }
 
-.margin-top.home{
+.margin-top.home {
     display: none;
 }
 
@@ -1518,6 +1518,9 @@ section.aboutmain-sec .about-data {
     position: relative;
     z-index: 1;
     padding: 50px 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .cuter-inside {
@@ -1553,7 +1556,8 @@ section.aboutmain-sec .about-data {
     object-fit: cover;
     transition: 0.5s ease-in;
 }
-.projects-holder:hover .projects-image img{
+
+.projects-holder:hover .projects-image img {
     scale: 1.1;
 }
 
@@ -1575,7 +1579,8 @@ span.projectdate {
     padding-bottom: 10px;
 }
 
-.readmore-icon a,.readmore-icon p {
+.readmore-icon a,
+.readmore-icon p {
     font-size: 18px;
     font-weight: 400;
     line-height: normal;
@@ -1602,7 +1607,8 @@ span.projectdate {
     width: 100%;
     margin: 0 auto;
 }
-.projects-holder:hover{
+
+.projects-holder:hover {
     box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
 }
 
@@ -1627,5 +1633,162 @@ section.aboutourproject-sec .about-data {
     text-align: start;
 }
 
+section.faqabout-sec .about-data {
+    margin: 0;
+    text-align: start;
+}
+
+.faqhold .grid-accordean {
+    background: linear-gradient(to right, #0165af, #003087) 1;
+    background-image: linear-gradient(to right, var(--tw-gradient-stops));
+    --tw-gradient-from: #0165af;
+    --tw-gradient-to: rgb(230 46 65 / 0);
+    --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+    --tw-gradient-to: #003087;
+    transition-duration: 300ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 1, 1);
+    color: var(--color-white);
+    padding: 20px;
+
+}
+
+.faqhold {
+    padding-top: 50px;
+}
+
+.height-auto {
+    height: fit-content !important;
+}
+
+.faqhold .row {
+    gap: 30px;
+}
+
+
+section.faqabout-sec {
+    padding: 80px 0px;
+    /* background-color: hsl(205.71deg 20% 13.73%); */
+    color: var(--color-whitess);
+}
+
+/* section.faqabout-sec .sub-title,section.faqabout-sec .mini-span,section.faqabout-sec p{
+    color: var(--color-white);
+} */
+
+section.faqabout-sec .acrdean-data {
+    padding-top: 20px;
+}
+
+section.aboutchoose-sec.faqmain .about-data {
+    margin: 0;
+    text-align: start;
+    padding-bottom: 50px;
+}
+
+section.aboutchoose-sec.faqmain .grid-cutter-images {
+    flex-direction: row-reverse;
+}
+
+section.aboutchoose-sec.faqmain {
+    padding-top: 60px;
+}
+
 
 /* ABOUT SEC END */
+
+
+
+/* ALL PROJRCTS  */
+.slider-main-images {
+    max-width: 100%;
+    height: 300px;
+    overflow: hidden;
+}
+
+.slider-main-images img {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    transition: 0.3s ease-in;
+}
+
+.btm-data-crowd-slider {
+    max-width: 485px;
+    background: #fff;
+    width: 100%;
+    padding-bottom: 10px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+}
+
+.btm-data-crowd-slider:hover .slider-main-images img {
+    scale: 1.1;
+}
+
+.two-five {
+    font-size: 25px;
+    color: #000;
+    font-weight: 500;
+    padding-bottom: 10px;
+    line-height: normal;
+}
+
+.btm-data-crowd-slider p {
+    color: #4D4D4D;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 30px;
+    padding-bottom: 0px;
+}
+
+.elysium.grid {
+    display: flex;
+    justify-content: space-between;
+    gap: 20px;
+}
+
+.elysium,
+.elysium.grid {
+    border-bottom: 1px solid #D9D9D9;
+    padding: 10px 20px;
+
+}
+
+section.allprojects-sec {
+    background: #0164ae36;
+    padding: 100px 0px;
+}
+
+.datemain {
+    color: #22262A;
+    font-size: 20px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 17px;
+}
+
+.holdit .elysium.grid:last-child {
+    border: none;
+}
+
+.btm-data-crowd-slider .data-acuired p {
+    font-size: 16px;
+    font-weight: 500;
+    line-height: normal;
+    padding-bottom: 10px;
+}
+
+.grid-projects {
+    display: flex;
+    gap: 60px;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding-top: 50px;
+}
+
+
+
+
+
+
+/* ALL PROJRCTS END */
