--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -206,24 +206,36 @@
     .slider-main-images {
         height: 245px;
     }
+
     .two-five {
         font-size: 22px;
     }
+
     .btm-data-crowd-slider p {
         font-size: 16px;
     }
+
     .btm-data-crowd-slider .data-acuired p {
         font-size: 14px;
     }
+
     .datemain {
         font-size: 16px;
     }
 
-    section.allprojects-sec{
+    section.allprojects-sec {
         padding: 80px 0px;
     }
-    section.allprojects-sec{
+
+    section.allprojects-sec,
+    section.ourteam-sec {
         padding: 60px 0px;
+    }
+    .service-details {
+        max-width: 700px;
+    }
+    .oddeven-holder .sercoveholds,section.servicess-sec{
+        padding: 50px 0px;
     }
 
 
@@ -541,16 +553,37 @@
     .btm-data-crowd-slider {
         max-width: 340px;
     }
+
     .slider-main-images {
         height: 210px;
     }
+
     .two-five {
         font-size: 20px;
         padding-bottom: 5px;
     }
 
-    section.allprojects-sec{
+    section.allprojects-sec,section.ourteam-sec{
         padding: 50px 0px;
+    }
+
+    .team-image {
+        height: 270px;
+    }
+    .socialmediateam ul li i{
+        font-size: 22px;
+    }
+    .team-holder .two-five{
+        padding-bottom: 5px;
+    }
+    section.servicess-sec .grid-choose-us{
+        padding-bottom: 30px;
+    }
+    .service-details {
+        max-width: 600px;
+    }
+    .oddeven-holder .sercoveholds, section.servicess-sec{
+        padding: 40px 0px;
     }
 
 
@@ -753,8 +786,12 @@
     section.faqabout-sec {
         padding: 40px 0px;
     }
-    .grid-projects{
+
+    .grid-projects {
         padding-top: 30px;
+    }
+    .service-details {
+        max-width: 500px;
     }
 
 
@@ -899,7 +936,19 @@
     section.aboutchoose-sec.faqmain .grid-cutter-images {
         flex-direction: column;
     }
+    section.ourteam-sec{
+        padding: 40px 0px;
+    }
 
+    .service-details,.oddeven-holder .sercoveholds:nth-child(odd) .service-details{
+        max-width: 100%;
+        margin: 0 auto;
+        padding-bottom: 30px;
+    }
+    .ed-drawing,.oddeven-holder .sercoveholds:nth-child(odd) .ed-drawing{
+        margin: 0 auto;
+        max-width: 500px;
+    }
 
 
 
