--- a/assets/css/responsive.css
+++ b/assets/css/responsive.css
@@ -982,6 +982,9 @@
         margin: 0 auto;
         max-width: 500px;
     }
+    section.aboutchoose-sec.faqmain.main-dataimage {
+        padding-top: 40px;
+    }
 
 
 
@@ -1051,6 +1054,10 @@
         font-size: 16px;
         padding: 8px 0px;
     }
+    section.aboutchoose-sec.faqmain .about-data{
+        padding-bottom: 30px;
+    }
+    
 }
 
 @media(max-width:575px) {
